fixed overflowing card in index html

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   background-color: gray;
   margin-top: 30px;
   padding-bottom: 10px;
+  overflow: hidden;
 }
 
 .card {
